--- a/app/views/roles/_form.html.erb
+++ b/app/views/roles/_form.html.erb
@@ -1,22 +1,29 @@
-<%= form_with(model: role) do |form| %>
-  <% if role.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(role.errors.count, "error") %> prohibited this role from being saved:</h2>
+<div id="form" class="m-2 p-3">
+  <%= form_with(model: @role) do |form| %>
+    <% if @role.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(role.errors.count, "error") %> prohibited this role from being saved:</h2>
 
-      <ul>
-        <% role.errors.each do |error| %>
+        <ul>
+          <% @role.errors.each do |error| %>
           <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="row">
+      <div class="col-lg-6 ml-2 mr-1">
+        <%= form.label "Nombre", style: "display: block" %>
+        <%= form.text_field :name, class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12 col-lg-6 ml-2 mt-3">
+        <%= form.submit "Guardar rol", class: "btn btn-sm btn-primary" %>
+      </div>
     </div>
   <% end %>
+</div>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
