--- a/app/views/roles/_role.html.erb
+++ b/app/views/roles/_role.html.erb
@@ -1,7 +1,11 @@
-<div id="<%= dom_id role %>">
-  <p>
-    <strong>Name:</strong>
-    <%= role.name %>
-  </p>
-
+<div id="<%= dom_id role %>"class="d-flex justify-content-between m-2 p-3 border-bottom">
+  <h2><%= role.name %></h2>
+  <div class="btn-group mx-3" role="group" aria-label="role Edit">
+    <%= link_to edit_role_path, class: "btn btn-warning" do %>
+      <%= fa_icon "exchange" , text: " Editar" %>
+    <% end %>
+    <%= button_to role_path(role), method: :delete, class: "btn btn-danger" do %>
+      <%= fa_icon "trash" , text: " Eliminar" %>
+    <% end %>
+  </div>
 </div>
