--- a/app/views/roles/edit.html.erb
+++ b/app/views/roles/edit.html.erb
@@ -1,10 +1,23 @@
-<h1>Editing role</h1>
+<div class="container-fluid d-flex justify-content-center ">
+  <div class="col-6 m-2 p-3 bg-light rounded shadow">
+    <div class="d-flex justify-content-between m-2 p-3 border-bottom">
+      <h2>Editar rol</h2>
+    </div>
 
-<%= render "form", role: @role %>
+    <%= render "form", role: @role %>
 
-<br>
+    <div id="page_navigation">
+      <div class="row m-1 p-2">
+        <%= link_to @role, class: "btn btn-info" do %>
+          <%= fa_icon "eye", text: " Mostrar #{@role.name}" %>
+        <% end %>
+      </div>
 
-<div>
-  <%= link_to "Show this role", @role %> |
-  <%= link_to "Back to roles", roles_path %>
+      <div class="row m-1 p-2">
+        <%= link_to roles_path, class: "btn btn-danger" do %>
+          <%= fa_icon "undo", text: " Volver a Roles" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
