--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -1,9 +1,17 @@
-<h1>New role</h1>
+<div class="container-fluid d-flex justify-content-center ">
+  <div class="col-6 m-2 p-3 bg-light rounded shadow">
+    <div class="d-flex justify-content-between m-2 p-3 border-bottom">
+      <h2>Nuevo Rol</h2>
+    </div>
 
-<%= render "form", role: @role %>
+    <%= render "form", role: @role %>
 
-<br>
-
-<div>
-  <%= link_to "Back to roles", roles_path %>
+    <div id="page_navigation">
+      <div class="row m-1 p-2">
+        <%= link_to roles_path, class: "btn btn-danger" do %>
+          <%= fa_icon "arrow-left", text: " Volver a Roles" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
