--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,23 @@
-<h1>Editing user</h1>
+<div class="container-fluid d-flex justify-content-center ">
+  <div class="col-6 m-2 p-3 bg-light rounded shadow">
+    <div class="d-flex justify-content-between m-2 p-3 border-bottom">
+      <h2>Editar usuario</h2>
+    </div>
 
-<%= render "form", user: @user %>
+    <%= render "form", role: @user %>
 
-<br>
+    <div id="page_navigation">
+      <div class="row m-1 p-2">
+        <%= link_to @user, class: "btn btn-info" do %>
+          <%= fa_icon "eye", text: " Mostrar #{@user.name}" %>
+        <% end %>
+      </div>
 
-<div>
-  <%= link_to "Show this user", @user %> |
-  <%= link_to "Back to users", users_path %>
+      <div class="row m-1 p-2">
+        <%= link_to users_path, class: "btn btn-danger" do %>
+          <%= fa_icon "undo", text: " Volver a Usuarios" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
