--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -69,7 +69,7 @@
   <div class="row">
     <div class="col-12 col-lg-4 ml-2">
       <%= form.label "Telefono", style: "display: block" %>
-      <%= form.text_field :phone1, class: "form-control" %>
+      <%= form.text_field :phone, class: "form-control" %>
     </div>
 
     <div class="col-12 col-lg-4 mr-2">
