--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,17 @@
 
   <body>
 
+    <!-- header -->
+    <% if user_signed_in? %>
+      <header class="py-3 bg-light">
+        <div class="row me-3">
+          <div class="col-12 text-end">
+            <span class="text-muted"><%= current_user.email %></span>
+          </div>
+        </div>
+      </header>
+    <% end %>
+
     <%= render "layouts/navbar" %>
 
     <%= yield %>
@@ -22,4 +33,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
   </body>
+  
 </html>
