--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -78,7 +78,7 @@
     </div>
   </div>
 
-  <% if current_user.present? && current_user.role_id == 1%>
+  <% if current_user.present? && current_user.admin? %>
   <div class="row">
     <div class="col-12 col-lg-6 ml-2">
       <%= form.label "Rol", style: "display: block" %>
