--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -78,14 +78,16 @@
     </div>
   </div>
 
-  <% if current_user.present? && current_user.admin? && params[:super_id].blank? && !(@user.user?) %>
-  <div class="row">
-    <div class="col-12 col-lg-6 ml-2">
-      <%= form.label "Rol", style: "display: block" %>
-      <%= form.collection_select :role_id, Role.all, :id, :name, 
-      class: "form-select" %>
-    </div> 
-  </div>
+  <% if current_user.present? && current_user.admin? && params[:super_id].blank? %>
+    <% unless @user.role_id.present? && @user.user? %>
+      <div class="row">
+        <div class="col-12 col-lg-6 ml-2">
+          <%= form.label "Rol", style: "display: block" %>
+          <%= form.collection_select :role_id, Role.all, :id, :name, 
+          class: "form-select" %>
+        </div> 
+      </div>
+    <% end %>
   <% end %>
 
   <% if params[:super_id].present? %>
