--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-success">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">SalasApp</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" 
+      data-bs-toggle="collapse" 
+      data-bs-target="#navbarSupportedContent" 
+      aria-controls="navbarSupportedContent" 
+      aria-expanded="false" 
+      aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -26,7 +31,10 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <%= link_to destroy_user_session_path, method: :delete, 
+            class: "btn btn-danger mx-2" do %>
+            <%= fa_icon "power-off" , text: " Salir" %>
+          <% end %>
         </li>
       </ul>
       <form class="d-flex">
@@ -34,9 +42,5 @@
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
-    <%= link_to destroy_user_session_path, method: :delete, 
-      class: "btn btn-danger mx-2" do %>
-      <%= fa_icon "power-off" , text: " Salir" %>
-    <% end %>
   </div>
 </nav>
