--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,19 @@
 <div class="container-fluid d-flex justify-content-center ">
   <div class="col-lg-6 col-10 m-2 p-3 bg-light rounded shadow">
     <%= render @user %>
-    <div id="page_navigation">
-      <div class="row m-1 p-2">
-        <%= link_to users_path, class: "btn btn-dark" do %>
-          <%= fa_icon "undo", text: " Volver a Usuarios" %>
-        <% end %>
-      </div>
-    </div>
   </div>
 </div>
 
 <div id="page_navigation">
   <div class="row m-1 p-2">
-    <%= link_to users_path, class: "btn btn-danger" do %>
-      <%= fa_icon "arrow-left", text: " Volver a Usuarios" %>
+    <% if current_user.admin? %>
+      <%= link_to users_path, class: "btn btn-danger" do %>
+        <%= fa_icon "arrow-left", text: " Volver a usuarios" %>
+      <% end %>
+    <% else %>
+      <%= link_to current_user, class: "btn btn-danger" do %>
+        <%= fa_icon "arrow-left", text: " Volver al perfil" %>
+      <% end %>
     <% end %>
   </div>
 </div>
