--- a/app/views/teches/edit.html.erb
+++ b/app/views/teches/edit.html.erb
@@ -1,10 +1,23 @@
-<h1>Editing tech</h1>
+<div class="container-fluid d-flex justify-content-center ">
+  <div class="col-6 m-2 p-3 bg-light rounded shadow">
+    <div class="d-flex justify-content-between m-2 p-3 border-bottom">
+      <h2>Editar técnico</h2>
+    </div>
 
-<%= render "form", tech: @tech %>
+    <%= render "form", role: @tech %>
 
-<br>
+    <div id="page_navigation">
+      <div class="row m-1 p-2">
+        <%= link_to @tech, class: "btn btn-info" do %>
+          <%= fa_icon "eye", text: " Mostrar #{@tech.name}" %>
+        <% end %>
+      </div>
 
-<div>
-  <%= link_to "Show this tech", @tech %> |
-  <%= link_to "Back to teches", teches_path %>
+      <div class="row m-1 p-2">
+        <%= link_to teches_path, class: "btn btn-danger" do %>
+          <%= fa_icon "undo", text: " Volver a Usuarios" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
