--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -39,3 +39,9 @@
   </div>
 <% end %>
 
+<% unless user.user? %>
+  <div id="teches" class="p-2 border-bottom">
+    <%= render "users/teches" %>
+  </div>      
+<% end %>
+
