--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -28,19 +28,26 @@
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
               </ul>
             </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to "Reservas", reservations_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Técnicos", teches_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Salas", rooms_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Perfil", current_user, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to destroy_user_session_path, method: :delete, 
+                    class: "btn btn-danger mx-2" do %>
+              <%= fa_icon "power-off" , text: " Salir" %>
+              <% end %>
+            </li>
           <% end %>
-          <li class="nav-item">
-            <%= link_to "Técnicos", teches_path, class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Perfil", current_user, class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to destroy_user_session_path, method: :delete, 
-                  class: "btn btn-danger mx-2" do %>
-            <%= fa_icon "power-off" , text: " Salir" %>
-            <% end %>
-          </li>
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
