--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,9 +1,25 @@
-<h1>New room</h1>
+<div class="container-fluid d-flex justify-content-center ">
+  <div class="col-6 m-2 p-3 bg-light rounded shadow">
+    <div class="d-flex justify-content-between m-2 p-3 border-bottom">
+      <h2>Nueva sala <%= "de #{User.find(params[:user_id]).name}" if params[:user_id].present? %></h2>
+    </div>
 
-<%= render "form", room: @room %>
+    <%= render "form", room: @room %>
 
-<br>
-
-<div>
-  <%= link_to "Back to rooms", rooms_path %>
+      <div id="page_navigation">
+        <div class="row m-1 p-2">
+          <% if current_user.super? %>
+            <%= link_to rooms_path, class: "btn btn-danger" do %>
+              <%= fa_icon "arrow-left", text: " Volver a técnicos" %>
+            <% end %>
+          <% elsif current_user.admin? %>
+            <%= link_to User.find(params[:user_id]), class: "btn btn-danger" do %>
+              <%= fa_icon "arrow-left", text: " Volver a #{User.find(params[:user_id]).name}" %>
+            <% end %>
+          <% end %>
+          
+        </div>
+      </div>
+      
+  </div>
 </div>
