--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,10 +1,13 @@
-<p style="color: green"><%= notice %></p>
+<div class="container-fluid d-flex justify-content-center ">
+  <div class="col-lg-6 col-10 m-2 p-3 bg-light rounded shadow">
+    <%= render @room %>
+  </div>
+</div>
 
-<%= render @room %>
-
-<div>
-  <%= link_to "Edit this room", edit_room_path(@room) %> |
-  <%= link_to "Back to rooms", rooms_path %>
-
-  <%= button_to "Destroy this room", @room, method: :delete %>
+<div id="page_navigation">
+  <div class="row m-1 p-2">
+    <%= link_to rooms_path, class: "btn btn-danger" do %>
+      <%= fa_icon "arrow-left", text: " Volver a salas" %>
+    <% end %>
+  </div>
 </div>
