--- a/app/views/users/_rooms.html.erb
+++ b/app/views/users/_rooms.html.erb
@@ -1,12 +1,12 @@
-<div id="teches" class="col-lg-8 d-block mx-auto m-2 p-3">
+<div id="salas" class="col-lg-8 d-block mx-auto m-2 p-3">
   <div class="d-flex justify-content-between m-2 p-3 border-bottom">
-    <h2>Técnicos</h2>
+    <h2>Salas</h2>
     <% if current_user.admin? %>
-      <%= link_to "Añadir técnico", new_tech_path(user_id: @user), 
+      <%= link_to "Añadir sala", new_room_path(user_id: @user), 
         class: "btn btn-sm btn-success"  %>
     <% end %>
   </div>
   <div class="m-2 p-3">
-    <%= render "teches/table_teches_index" %>
+    <%= render "rooms/table_rooms_index" %>
   </div>
 </div>
