fixed user show view

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -6,7 +6,7 @@
       <h2>Salas</h2>
       <% if current_user.super? %>
         <%= link_to new_room_path, class: "btn btn-success" do %>
-          <%= fa_icon "plus", text: "Nuevo técnico" %>
+          <%= fa_icon "plus", text: "Nueva sala" %>
         <% end %>
       <% end %>
     </div>
