--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -13,17 +13,20 @@
 
   <div>
     <%= form.label :day, style: "display: block" %>
-    <%= form.date_field :day %>
+    <%= form.date_select :day, order: [:day, :month, :year],
+     start_year: Date.today.year,
+     end_year: Date.today.year + 1,
+     default: Date.today %>
   </div>
 
   <div>
     <%= form.label :start_time, style: "display: block" %>
-    <%= form.time_field :start_time %>
+    <%= form.time_select :start_time, {minute_step: 30} %>
   </div>
 
   <div>
     <%= form.label :end_time, style: "display: block" %>
-    <%= form.time_field :end_time %>
+    <%= form.time_select :end_time, {minute_step: 30} %>
   </div>
 
   <div>
@@ -48,13 +51,15 @@
 
   <div>
     <%= form.label :room_id, style: "display: block" %>
-    <%= form.collection_select :reservation, :room_id, @rooms, :id, :name %>
+    <%= form.collection_select :room_id, @rooms, :id, :name %>
   </div>
 
   <div>
     <%= form.label :tech_id, style: "display: block" %>
-    <%= form.collection_select :reservation, :tech_id, @teches, :id, :name %>
+    <%= form.collection_select :tech_id, @teches, :id, :name %>
   </div>
+
+  <%= form.hidden_field :user_id, value: params[:user_id] %>
 
   <div>
     <%= form.submit %>
