[calendar] gem added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 
     <%= render "layouts/navbar" %>
 
-    <div class="container mx-auto">
+    <div class="container-fluid d-flex justify-content-center">
       <%= yield %>
     </div>
     
