--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -3,7 +3,7 @@
 
   <div class="col-lg-8 col-md-10 bg-light rounded shadow">
     <div class="d-flex justify-content-between m-2 p-3 border-bottom">
-      <h2>Reservas</h2>
+      <h2>Reservas por mes</h2>
       <% if current_user.super? %>
         <%= link_to new_reservation_path, class: "btn btn-success" do %>
           <%= fa_icon "plus", text: "Nueva reserva" %>
@@ -11,14 +11,21 @@
       <% end %>
     </div>
 
-    <div id="salas" class="col-lg-8 d-block mx-auto m-2 p-3">
-      <% if current_user.admin? %>
-        <p>Para añadir una reserva, hazlo desde el perfil de la empresa</p>
-      <% end %>
-      <%= render "simple_calendar/schedule_table" %>
-    </div>
+    <% if params[:table] == "week" %>
+      <div id="calendario" class="col-lg-8 d-block mx-auto m-2 p-3">
+        <%= render "simple_calendar/week_table" %>
+      </div>
+    <% elsif params[:table] == "day"%>
+      <div id="calendario" class="col-lg-8 d-block mx-auto m-2 p-3">
+        <%= render "simple_calendar/day_table" %>
+      </div>
+    <% else %>
+      <div id="calendario" class="col-lg-8 d-block mx-auto m-2 p-3">
+        <%= render "simple_calendar/month_table" %>
+      </div>
+    <% end %>
 
-    <div id="salas" class="col-lg-8 d-block mx-auto m-2 p-3">
+    <div id="tabla_reservas" class="col-lg-8 d-block mx-auto m-2 p-3">
       <% if current_user.admin? %>
         <p>Para añadir una reserva, hazlo desde el perfil de la empresa</p>
       <% end %>
