--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,7 +1,7 @@
 <div class="simple-calendar">
   <div class="calendar-heading m-2 p-3">
     <%= link_to t('simple_calendar.previous', default: 'Anterior'), calendar.url_for_previous_view, class: "btn btn-sm btn-primary" %>
-    <span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
+    <span class="calendar-title mx-2"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
     <%= link_to t('simple_calendar.next', default: 'Siguiente'), calendar.url_for_next_view, class: "btn btn-sm btn-primary" %>
   </div>
 
