finishing views, deleted role views and controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,11 +35,11 @@
     </div>
   </div>
 
-  <div class="row">
+  <header class="row">
     <div class="col-12">
       <%= render "layouts/navbar" %>
     </div>
-  </div>
+  </header>
 
   <div class="row">
     <div class="col-12">
