--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -6,8 +6,8 @@
 
 <div id="page_navigation">
   <div class="row m-1 p-2">
-    <%= link_to rooms_path, class: "btn btn-danger" do %>
-      <%= fa_icon "arrow-left", text: " Volver a salas" %>
+    <%= link_to root_path, class: "btn btn-dark" do %>
+      <%= fa_icon "home", text: " Página Principal" %>
     <% end %>
   </div>
 </div>
