--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,39 +1,1 @@
-
-<div class="container-fluid d-flex justify-content-center">
-
-  <div class="col-lg-8 col-md-10 bg-light rounded shadow">
-    <div class="d-flex justify-content-between m-2 p-3 border-bottom">
-      <h2>Usuarios</h2>
-      <%= link_to new_user_path, class: "btn btn-success" do %>
-        <%= fa_icon "plus", text: "Nuevo Usuario" %>
-      <% end %>
-    </div>
-
-    <div id="usuarios" class="col-lg-8 d-block mx-auto m-2 p-3">
-      <table>
-        <thead>
-          <tr>
-            <td>Usuario</td>
-          </tr>
-        </thead>
-        <tbody>
-          <% @users.each do |user| %>
-          <tr>
-            <td><%= link_to user.email, user %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-
-    <div id="page_navigation">
-      <div class="row m-1 p-2">
-        <%= link_to root_path, class: "btn btn-dark" do %>
-          <%= fa_icon "home", text: " Página Principal" %>
-        <% end %>
-      </div>
-    </div>
-
-  </div>
-</div>
-
+<%= render "users/index_users_content" %>
