--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<%= render "users/index_users_content" if current_user.admin? %>
+
+<%= render "reservations/index_reservations" unless current_user.admin?  %>
+
+
