--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,62 +1,27 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-success">
-  <div class="container-fluid">
-    <%= link_to "SalasApp", root_path, class: "navbar-brand" %>
-    <% if user_signed_in? %>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <% if current_user.admin? %>
-            <li class="nav-item">
-              <%= link_to "Usuarios", users_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Configuracion
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <%= link_to "Roles", roles_path, class: "dropdown-item" %>
-                </li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-          <% else %>
-            <li class="nav-item">
-              <%= link_to "Reservas", reservations_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Técnicos", teches_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Salas", rooms_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Perfil", current_user, class: "nav-link" %>
-            </li>
-          <% end %>
-          <li class="nav-item">
-            <%= link_to destroy_user_session_path, method: :delete, 
-                  class: "btn btn-danger mx-2" do %>
-            <%= fa_icon "power-off" , text: " Salir" %>
-            <% end %>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-        
-      </div>
-
-    <% else %>
-    <% end %>
+<ul class="nav nav-pills bg-success">
+  <div class="container-fluid d-flex justify-content-between align-items-center">
+    <div class="d-flex align-items-center">
+      <li class="nav-item fs-4">SalasApp</li>
+      <% if user_signed_in? %>
+      <li class="nav-item">
+        <%= link_to "Usuarios", users_path, class: "nav-link text-white" if current_user.admin? %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Reservas", reservations_path, class: "nav-link text-white" unless current_user.admin? %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Mis Datos", current_user, class: "nav-link text-white" %>
+      </li>
+    </div>
+    <div>
+      <li class="nav-item">
+        <%= link_to destroy_user_session_path, method: :delete, 
+              class: "btn btn-danger mx-2" do %>
+        <%= fa_icon "power-off" , text: " Salir" %>
+        <% end %>
+      </li>
+    </div>
   </div>
-</nav>
+  <% else %>
+  <% end %>
+</ul>
