--- a/app/views/reservations/_table_reservations_index.html.erb
+++ b/app/views/reservations/_table_reservations_index.html.erb
@@ -18,7 +18,7 @@
         <td><%= link_to reservation.title, reservation %></td>
         <td><%= reservation.day.strftime("%d/%m/%Y") %></td>
         <td><%= reservation.start_time.strftime("%H:%M") %></td>
-        <td><%= reservation.end_time.strftime("%H:%M") %></td>
+        <td><%= (reservation.end_time + 1.minute).strftime("%H:%M") %></td>
         <td><%= link_to reservation.room.name, reservation.room %></td>
         <td><%= link_to reservation.tech.name, reservation.tech %></td>
       </tr>
