--- a/app/views/teches/_form.html.erb
+++ b/app/views/teches/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: tech) do |form| %>
-  <% if tech.errors.any? %>
+<%= form_with(model: @tech) do |form| %>
+  <% if @tech.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(tech.errors.count, "error") %> prohibited this tech from being saved:</h2>
+      <h2><%= pluralize(@tech.errors.count, "error") %> prohibited this @tech from being saved:</h2>
 
       <ul>
-        <% tech.errors.each do |error| %>
+        <% @tech.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
