--- a/app/views/teches/edit.html.erb
+++ b/app/views/teches/edit.html.erb
@@ -8,14 +8,8 @@
 
     <div id="page_navigation">
       <div class="row m-1 p-2">
-        <%= link_to @tech, class: "btn btn-info" do %>
-          <%= fa_icon "eye", text: " Mostrar #{@tech.name}" %>
-        <% end %>
-      </div>
-
-      <div class="row m-1 p-2">
-        <%= link_to teches_path, class: "btn btn-danger" do %>
-          <%= fa_icon "undo", text: " Volver a Usuarios" %>
+        <%= link_to root_path, class: "btn btn-dark" do %>
+          <%= fa_icon "home", text: " Página Principal" %>
         <% end %>
       </div>
     </div>
