--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,13 +6,13 @@
 
     <%= render "form", user: @user %>
 
-      <div id="page_navigation">
-        <div class="row m-1 p-2">
-          <%= link_to users_path, class: "btn btn-danger" do %>
-            <%= fa_icon "arrow-left", text: " Volver a Usuarios" %>
-          <% end %>
-        </div>
+    <div id="page_navigation">
+      <div class="row m-1 p-2">
+        <%= link_to root_path, class: "btn btn-dark" do %>
+          <%= fa_icon "home", text: " Página Principal" %>
+        <% end %>
       </div>
+    </div>
       
   </div>
 </div>
