added protection to users and reservations

--- a/app/views/teches/_table_teches_index.html.erb
+++ b/app/views/teches/_table_teches_index.html.erb
@@ -5,12 +5,18 @@
   <thead>
     <tr>
       <td>Técnico</td>
+      <% if current_user.admin? %>
+        <td>De</td>
+      <% end %>
     </tr>
   </thead>
   <tbody>
     <% @teches.each do |tech| %>
     <tr>
       <td><%= link_to tech.name, tech %></td>
+      <% if current_user.admin? %>
+        <td><%= link_to tech.user.name, tech.user %></td>
+      <% end %>
     </tr>
     <% end %>
   </tbody>
