[reservation] minor fix to index title

--- a/app/views/reservations/_index_reservations.html.erb
+++ b/app/views/reservations/_index_reservations.html.erb
@@ -2,7 +2,7 @@
 
   <div class="col-lg-8 col-md-10 bg-light rounded shadow">
     <div class="d-flex justify-content-between m-2 p-3 border-bottom">
-      <h2>Reservas por mes</h2>
+      <h2>Reservas <%= params[:table].present? ? "del día" : "del mes" %></h2>
       <%= link_to new_reservation_path, class: "btn btn-success" do %>
       <%= fa_icon "plus", text: "Nueva reserva" %>
       <% end %>
