--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <% if params[:user_id].present? %>
-    <%= form.hidden_field :user_id, :value => params[:user_id]  %>
+    <%= form.hidden_field :user_id, :value => User.friendly.find(params[:user_id]).id  %>
   <% end %>
 
   <div>
